# pyramid_contextauth

./: .coveragerc  .coveralls.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  dev-requirements.txt  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
example/: __init__.py
pyramid_contextauth/: __init__.py
pyramid_contextauth/tests/: __init__.py  test_example.py  test_pyramid_contextauth.py
