[metadata]
name = pyramid_contextauth
version = 0.4
summary = Pyramid Security Extension
requires-dist =
    pyramid >=1.4, <1.5

description-file = README.rst
author = Hadrien David
author_email = hadrien@ectobal.com

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[files]
packages =
    pyramid_contextauth

[noah]
public = True

extra_files =
    setup.py

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_contextauth
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
