[metadata]
name = pyramid_contextauth
version = 0.7.2
summary =
    Pyramid security extension to register multiple contexts based
    authentication policies.
requires-dist =
    pyramid >=1.4, <1.5
description-file =
    README.rst
    CHANGES.rst
author = Hadrien David
author_email = hadrien@ectobal.com
home_page = https://github.com/hadrien/pyramid_contextauth
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI
    License :: Repoze Public License
license = BSD-derived (http://www.repoze.org/LICENSE.txt)

[files]
packages =
    pyramid_contextauth

[noah]
public = True

extra_files =
    setup.py

[nosetests]
match = ^test
nocapture = 1
cover-package = pyramid_contextauth
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
with-yanc = 1
